@@ -10,37 +10,37 @@ package org.andor.core.interpreter.gui.objects;
 
 import java.util.List;
 
-import org.andor.core.Colour;
 import org.andor.core.interpreter.ml.MLInterpretedObject;
 import org.andor.core.interpreter.ml.MLInterpreterObject;
 import org.andor.core.parser.ml.MLObject;
+import org.andor.gui.GUIButton;
 
-public class IntObj_GUIColour extends MLInterpreterObject {
+public class IntObj_GUIButton extends MLInterpreterObject {
 
 	/* The constructor */
-	public IntObj_GUIColour() {
+	public IntObj_GUIButton() {
 		//Call the super constructor
-		super("GUIColour");
+		super("GUIButton");
 	}
 	
 	/* The method used to interpret a specific object */
 	public MLInterpretedObject interpret(MLObject currentObject, List<MLInterpretedObject> interpretedObjects) {
 		//The parameters that are expected to be found
-		int r = 0, g = 0, b = 0, a = 0;
+		String text = "";
 		//Go through each parameter
 		for (int i = 0; i < currentObject.getParameters().size(); i++) {
 			//Check the name and assign the values
-			if (currentObject.getParameter(i).getName().equals("r"))
-				r = currentObject.getParameter(i).getIntegerValue();
-			else if (currentObject.getParameter(i).getName().equals("g"))
-				g = currentObject.getParameter(i).getIntegerValue();
-			else if (currentObject.getParameter(i).getName().equals("b"))
-				b = currentObject.getParameter(i).getIntegerValue();
-			else if (currentObject.getParameter(i).getName().equals("a"))
-				a = currentObject.getParameter(i).getIntegerValue();
+			if (currentObject.getParameter(i).getName().equals("text"))
+				text = currentObject.getParameter(i).getValue();
 		}
+		//Create the object
+		GUIButton button = new GUIButton(IntObj_GUIComponent.interpretRenderer(currentObject, interpretedObjects));
+		//Assign the variables
+		button.text = text;
+		//Setup the rest of the component
+		IntObj_GUIComponent.interpret(currentObject, interpretedObjects, button);
 		//Return the object
-		return new MLInterpretedObject(currentObject.getName(), new Colour(r, g, b, a));
+		return new MLInterpretedObject(currentObject.getName(), button);
 	}
 	
 }
